[package]
name = "nebula"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nebula"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
rustls = "0.21"
rustls-pemfile = "1.0"
trust-dns-server = "0.22"
trust-dns-client = "0.22"
rcgen = "0.11"
notify = "6.0"
walkdir = "2.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
which = "4.0"
chrono = { version = "0.4", features = ["serde"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process", "user"] }

[dev-dependencies]
tempfile = "3.0"